fix ex. 75: hovering no longer affects other letters

--- a/75_letter_pop_up.html
+++ b/75_letter_pop_up.html
@@ -6,13 +6,14 @@
     <title>Document</title>
     <style>
         div {
+            display: flex;
             font-size: 3rem;
         }
         span {
-            transition: font-size 0.3s ease;
+            transition: transform 0.3s ease;
         }
         span:hover {
-            font-size: 5rem;
+            transform: scale(2);
         }
     </style>
 </head>
